...
            
            "test1_main_progress_day_sessions":["1 session"],
            "test1_main_progress_week_sessions":["1 session"],
            "test1_main_progress_month_sessions":["1 session"],
            "test1_main_progress_year_sessions":["10 sessions"],
            //this need to be in correct swipe order
            "main_progress_chartnames":["Bat Speed","Peak Hand Speed","Attack Angle","Time to Contact","Blast Factor","Power","Peak Bat Speed","On Plane","Body Rotation","Vertical Bat Angle"],
            
            //progress data
            "main_progress_stats_profile_lowhigh":["Lowest","Highest"],
            "main_progress_stats_profile_daterange":["Day","Week","Month","Year"],
            
            //BatSpeed =============================
            "BatSpeed_low_day_BatSpeed":["35.8"],
            "BatSpeed_low_day_PeakHandSpeed":["##"],
            "BatSpeed_low_day_AttackAngle":["##"],
            "BatSpeed_low_day_TimeToContact":["##"],
            "BatSpeed_low_day_BlastFactor":["##"],
            "BatSpeed_low_day_Power":["##"],
            "BatSpeed_low_day_PeakBatSpeed":["##"],
...
            "VerticalBatAngle_high_year_BodyRotation":["##"],
            "VerticalBatAngle_high_year_VerticalBatAngle":["##"],
            
            
            "test1_main_progress_day_BatSpeed_low":["35.8"],
            "test1_main_progress_day_BatSpeed_average":["43.6"],
            "test1_main_progress_day_BatSpeed_high":["48.4"],
            "test1_main_progress_week_BatSpeed_low":["35.8"],
            "test1_main_progress_week_BatSpeed_average":["52.0"],
            "test1_main_progress_week_BatSpeed_high":["75.7"],
            "test1_main_progress_month_BatSpeed_low":["35.8"],
            "test1_main_progress_month_BatSpeed_average":["52.2"],
            "test1_main_progress_month_BatSpeed_high":["75.7"],
            "test1_main_progress_year_BatSpeed_low":["33.5"],
            "test1_main_progress_year_BatSpeed_average":["50.7"],
            "test1_main_progress_year_BatSpeed_high":["75.7"],
            
            "test1_main_progress_day_PeakHandSpeed_low":["9.5"],
            "test1_main_progress_day_PeakHandSpeed_average":["13.7"],
            "test1_main_progress_day_PeakHandSpeed_high":["16.1"],
            "test1_main_progress_week_PeakHandSpeed_low":["9.5"],
            "test1_main_progress_week_PeakHandSpeed_average":["15.2"],
            "test1_main_progress_week_PeakHandSpeed_high":["19.8"],
            "test1_main_progress_month_PeakHandSpeed_low":["9.5"],
...
            "test1_main_progress_year_OnPlane_low":["5"],
            "test1_main_progress_year_OnPlane_average":["61"],
            "test1_main_progress_year_OnPlane_high":["99"],
            
            "test1_main_progress_day_BodyRotation_low":["36"],
            "test1_main_progress_day_BodyRotation_average":["43"],
            "test1_main_progress_day_BodyRotation_high":["47"],
            "test1_main_progress_week_BodyRotation_low":["36"],
            "test1_main_progress_week_BodyRotation_average":["42"],
            "test1_main_progress_week_BodyRotation_high":["47"],
            "test1_main_progress_month_BodyRotation_low":["36"],
            "test1_main_progress_month_BodyRotation_average":["43"],
            "test1_main_progress_month_BodyRotation_high":["47"],
            "test1_main_progress_year_BodyRotation_low":["22"],
            "test1_main_progress_year_BodyRotation_average":["44"],
            "test1_main_progress_year_BodyRotation_high":["56"],
            
            "test1_main_progress_day_VerticalBatAngle_low":["-20"],
            "test1_main_progress_day_VerticalBatAngle_average":["-17"],
            "test1_main_progress_day_VerticalBatAngle_high":["-14"],
            "test1_main_progress_week_VerticalBatAngle_low":["-20"],
            "test1_main_progress_week_VerticalBatAngle_average":["-9"],
            "test1_main_progress_week_VerticalBatAngle_high":["10"],
            "test1_main_progress_month_VerticalBatAngle_low":["-29"],
            "test1_main_progress_month_VerticalBatAngle_average":["-17"],
...
